[package]
name = "Blockchain3"
version = "0.1.0"
edition = "2018"


[dependencies]
chrono = {version = "0.4", features = ["serde"]}
sha2 = "0.9.8"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version ="1.0.64", features = ["preserve_order"]}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rand = "0.8.0"
figment = "0.10.6"
lazy_static = "1.4.0"
url = "2.2.2"
reqwest = {version = "0.11.5", features = ["blocking", "json"]}
